# aras

./: .gitignore  Cargo.toml  Dockerfile  README.md  note.db  pyproject.toml
.github/workflows/: CI.yml
aras/: __init__.py  aras.pyi  aras_types.py  cli.py
aras_core/: Cargo.toml
aras_core/src/: app_ready.rs  application.rs  asgispec.rs  connection_info.rs  error.rs  http1_1.rs  lib.rs  lines_codec.rs  server.rs  types.rs
aras_core/src/http/: events.rs  handler.rs  http1_1.rs  mod.rs  scope.rs
aras_core/src/http1_1/: events.rs  handler.rs
aras_core/src/lifespan/: events.rs  handler.rs  mod.rs  scope.rs
aras_core/src/middleware_services/: concurrency_limiter.rs  logger.rs  max_size.rs  mod.rs
aras_core/src/server/: config.rs  mod.rs  server.rs  service.rs
aras_core/src/websocket/: events.rs  handler.rs  mod.rs  scope.rs
aras_core/tests/: test_lifespan.rs
interactive_application/: launch.py
interactive_application/app/: main.py
pytests/: conftest.py  test_basic.py  test_files.py  test_http.py  test_notes.py  test_websocket.py
pytests/asgi_applications/fastapi_application/: launch.py  requirements.txt
pytests/asgi_applications/fastapi_application/app/: basic.py  main.py  note.py
python/aras/: aras.pyi
src/: convert.rs  lib.rs  wrappers.rs
test_application/: README.md  requirements.txt
test_application/app/: basic.py  main.py  stream.py  ws.py
tests/: conftest.py  test_http.py
tests/applications/: __init__.py  basic.py  helpers.py  invalid.py
tests/asgi_application/: app.py  endpoints.py
