workspace = { members = ["aras_core"] }
[package]
name = "aras"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aras"
crate-type = ["cdylib"]

[dependencies]
aras_core = { path = "aras_core" }
pyo3 = { version = "^0.21.0", features = ["experimental-async"] }
pyo3-asyncio-0-21 = { version = "^0.21.0", features = ["attributes", "tokio-runtime"] }
log = "0.4.22"
simplelog = "^0.12.0"
tokio = { version = "1.13", features = ["full"] }

[package.metadata.maturin]
python-source = "aras"
