[package]
name = "aras_core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^1", features = ["full"] }
tower = { version = "^0.5.0", features = ["limit"] }
derive_more = { version = "^1.0.0", features = ["full"] }
tokio = { version = "^1.13", features = ["full"] }
http = "^1.1.0"
log = "^0.4.0"
thiserror = "^1.0.0"
http-body-util = "^0.1"
hyper-util = { version = "^0.1", features = ["full"] }
bytes = "^1.2"
futures = "^0.3.0"
futures-util = "^0.3.0"

[dev-dependencies]
